# AgentCafe

./: .dockerignore  .env.example  .gitignore  AGENT_CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT-PLAN.md  Dockerfile  FIX_PROGRESS.md  LICENSE  PROJECT_REVIEW_2.md  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
agentcafe/: __init__.py  config.py  crypto.py  keys.py  logging_config.py  main.py  middleware.py
agentcafe/cafe/: __init__.py  artifact.py  binding.py  cards.py  consent.py  human.py  integration.py  mcp_adapter.py  mcp_oauth.py  menu.py  pages.py  passport.py  policy.py  router.py  wizard_pages.py
agentcafe/db/: __init__.py  engine.py  migrate.py  models.py  seed.py
agentcafe/demo_agent/: __main__.py
agentcafe/demo_backends/: __init__.py  home_service.py  hotel.py  lunch.py
agentcafe/static/: webauthn.js
agentcafe/templates/: activate.html  base.html  consent.html  (+8 more)
dashboard/: package-lock.json  package.json
docs/: building-agents-for-agentcafe.md  e2e-test-plan.md  todo-onboarding-improvements.md
examples/: claude_agent.py  openai_agent.py  sample-spec.yaml
tests/: conftest.py  test_activity_feed.py  test_cards.py  test_consent.py  test_crypto.py  test_e2e.py  test_keys.py  test_landing_auth.py  test_mcp_adapter.py  test_mcp_oauth.py  test_menu.py  test_migrations.py  test_navigation.py  test_observability.py  test_order.py  test_passport.py  test_policy.py  test_revocation_delivery.py  test_service_integration.py  test_webauthn.py  test_wizard.py  test_wizard_docs.py  test_wizard_pages.py
(+96 files in other folders)
